# shuntr

./: .dockerignore  .gitignore  Dockerfile  PACKAGING.md  README.md  SETUP.md  activate_power_conda.ps1  environment.yml  pyproject.toml  render.yaml
.pytest-tmp/test_settings_round_trip0/output/config/: app_settings.json
.pytest_cache/v/cache/: nodeids
references/: release-layout.md
scripts/: build_and_smoke.ps1
src/: launch_app.py
src/shunt_reactor_engineering/: __init__.py  app.py  cables.py  paths.py  reactor.py  reporting.py  settings.py  studies.py
src/shunt_reactor_engineering/resources/latex/: report_template.tex.jinja
src/shunt_reactor_engineering/web/: forms.py  main.py  services.py
src/shunt_reactor_engineering/web/pages/home/templates/: index.html
src/shunt_reactor_engineering/web/pages/result/templates/: result.html
src/shunt_reactor_engineering/web/shared/static/: app.css
tests/: test_app.py  test_reactor.py  test_reporting.py  test_settings.py  test_studies.py  test_web_app.py
